# codenotes

./: .gitignore  README.md
2026/CN260001/: README.md
2026/CN260001/castle945/pytorch/: 1.10.0-cuda11.1-python3.8-devel.Dockerfile  1.12.0-cuda11.3-python3.8-devel.Dockerfile  1.9.1-cuda11.1-python3.8-devel.Dockerfile  2.1.0-cuda12.1-python3.8-devel.Dockerfile  pytorch-based.Dockerfile
2026/CN260001/castle945/rospyutils/: noetic.Dockerfile
2026/CN260001/castle945/ubuntu/: 22.04-desktop-full.Dockerfile  22.04-server-full.Dockerfile  22.04-vnc-humble.Dockerfile  vnc.Dockerfile
2026/CN260002/: README.md  docker-registry-ui.yaml
2026/CN260003/: README.md
2026/CN260003/cmake/cmake_template/: CMakeLists.txt  main.cpp
2026/CN260003/cmake/cmake_template/cmake/: defination.cmake
2026/CN260003/cmake/cmake_template/config/: config.yaml
2026/CN260003/cmake/cmake_template/include/: defination.h.in  udpclient.h  udpserver.h
2026/CN260003/cmake/cmake_template/src/: udpclient.cpp  udpserver.cpp
2026/CN260003/cmake/cmake_template/tools/: udpserver_loop.cpp
2026/CN260003/g++/: demo0003.cpp  main.cpp
2026/CN260003/g++/include/: demo0002.h  demo0003.h
2026/CN260004/: README.md
2026/CN260004/ros1_template/src/ros_test/: CMakeLists.txt  package.xml
2026/CN260004/ros1_template/src/ros_test/config/: test.yaml
2026/CN260004/ros1_template/src/ros_test/launch/: ros_test_run.launch
2026/CN260004/ros1_template/src/ros_test/rviz/: test.rviz
2026/CN260004/ros1_template/src/ros_test/src/: test_node.cpp
2026/CN260005/: README.md
2026/CN260005/demo0003/: DeepLearning.gitlab-ci.yml  docker-gitlab-runner.yml  echo.gitlab-ci.yml  pytest4gitci.tgz  python-docker.gitlab-ci.yml  python-docker_myrunner-in-docker.gitlab-ci.yml  python-docker_myrunner.gitlab-ci.yml  python_myrunner.gitlab-ci.yml
2026/CN260006/: README.md  demo0001.conf
2026/CN260007/: README.md  deeplearning_notes.ipynb
2026/CN260007/CNN/AlexNet_VGG_ResNet_ImageNet10/: ClassicCNN_ImageNet10.py
2026/CN260007/CNN/_LeNet_MNIST_FashionMNIST_Cifar10/: LeNet_Cifar10.py  LeNet_FashionMNIST.py  LeNet_MNIST.py
2026/CN260008/: README.md
2026/CN260008/_wandb/: LeNet_Cifar10_bayes_search.yaml  LeNet_Cifar10_grid_search.yaml  LeNet_Cifar10_random_search.yaml  LeNet_Cifar10_wandb_log.py  LeNet_Cifar10_wandb_sweep_cmd.py  LeNet_Cifar10_wandb_sweep_sdk.py  LeNet_Cifar10_wandb_table.py
2026/CN260008/param_tuning/: ClassicCNN_ImageNet10.py  ClassicCNN_ImageNet10.yaml  ClassicCNN_ImageNet10_finetune.py  ClassicCNN_ImageNet10_finetune.yaml
2026/CN260009/: README.md
2026/CN260009/_quick_demo/: GAN_MNIST.py  ResNet50_Cifar10.py  ResNet50_Cifar10_Pytorch.py  config.py
2026/CN260009/demo0001/: ResNet50_ImageNet10.py  config.py
2026/CN260009/demo0002/: setup.py
2026/CN260010/: README.md
2026/CN260011/: README.md  old_install
(+30 files in other folders)
