<?xml version="1.0"?>
<package>
  <name>ros_test</name>
  <version>0.0.0</version>
  <description>The ros test package</description>

  <maintainer email="city945@njust.edu.cn">city945</maintainer>
  
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>ros_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>ros_msgs</run_depend>

  <export>

  </export>
</package>
